--- a/content/modules/ROOT/pages/chapter02.adoc
+++ b/content/modules/ROOT/pages/chapter02.adoc
@@ -10,7 +10,7 @@
 * Your first action is to deploy the image, built by the developer, to the *QA environment*.
 * Your experience as a QA engineer has equipped you with a toolkit of scripts, designed to automate such tasks.
 * You open your QA terminal, and type the command:
-+
+
 [source, role="execute"]
 ----
 ./deploy-app.sh insecured
@@ -34,24 +34,27 @@ image::31_Ransomeware.png[]
 
 === Installing the Guard Rails
 
-In the aftermath of discovering a critical vulnerability during QA testing, the organisation convened a thorough post-mortem to determine the root cause and devise a more secure development workflow. You, a Red Hat consultant with expertise in supply chain security, join the meeting alongside the developers, QA engineers, platform engineers, and security leads.
+* In the aftermath of discovering a critical vulnerability during QA testing, the organisation convenes a post-mortem to establish a more secure development process. You, a Red Hat consultant with expertise in supply chain security, join the meeting alongside the developers, QA engineers, platform engineers, and security leads.
 
+* You begin by addressing the group: "Thank you for having me. I understand that a malicious component slipped through into your QA environment."
 
-=== Signed Commits
+* The *QA engineer* nods in agreement: "Yes, I ran my usual tests, but the application turned out to be compromised. I was shocked and immediately isolated the environment."
 
-* "Thanks for having me. I understand you encountered a serious issue where a malicious component slipped through into the QA environment," you begin. 
-* *QA Engineer*: "Yeah, I ran my tests as usual, but instead of the app, I got redirected to a page claiming it had been locked with ransomware. It caught me off guard."
-* *Security Engineer*: “We reviewed access logs and build artifacts. It appears the culprit was an unverified library or tampered code that made it into our pipeline.”
-* "Right," you reply. "In scenarios like this, it’s often not one person’s fault, but a gap in the controls we put in place. For starters, let’s make sure all source code commits are cryptographically signed. This gives us provenance, we can verify *who* made a change and *whether* that change is authentic."
+* The *security engineer* adds: "We reviewed logs and build artifacts. It appears the culprit was an unverified library that made it into our pipeline.
+
+* "Right," you reply. "In scenarios like this, it’s often not one person’s fault, but a gap in the controls we put in place. We need to strengthen your software supply chain in a way that prevents these incidents from happening again. Let me walk you through the key security practices we will put in place."
+
+=== 1. Signed Commits
+
+* "For starters, let’s make sure all source code commits are cryptographically signed. This gives us provenance, we can verify *who* made a change and *whether* that change is authentic."
 * *Developer*: "So you’re saying even if I didn’t see anything malicious, unsigned commits could let unverified code in?"
-* "Exactly. Let’s set up your Git environment to enforce signed commits. That’ll allow your CI pipeline to reject unverified changes before they’re ever built.
+* "Exactly. We will configure your Git environment to enforce signed commits. That way, only authorized and verified changes can enter your build process."
 
+=== 2. Signed Container Images
 
-=== Signed Container Images
+* "Next, we will confirm that the images built from your verified code are also signed, so no unsigned or tampered image can be deployed," you say.
+* "We will use link:glossary.html#cosign[*Cosign*,window=_blank] to create a signing secret," you explain, as you run the command in the terminal:
 
-* "Next, we will confirm that the images created from our verified code are also signed. This ensures that no unsigned or tampered image can be deployed, whether accidentally or through malicious activity."
-* "We will use link:glossary.html#cosign[*Cosign*,window=_blank] to create a signing secret," you explain, as you run this command in the development environment terminal:
-+
 [source, role="execute"]
 ----
 COSIGN_PASSWORD=openshift cosign generate-key-pair k8s://openshift-pipelines/signing-secrets
@@ -60,7 +63,7 @@ COSIGN_PASSWORD=openshift cosign generate-key-pair k8s://openshift-pipelines/sig
 image::76_Cosign_Secret.png[]
 
 * After generating the key pair, run this script to store the Cosign secrets in Vault so that our software templates can use them when needed."
-+
+
 [source, role="execute"]
 ----
 ./create-vault-entries.sh
@@ -69,7 +72,7 @@ image::76_Cosign_Secret.png[]
 image::105_copy_secret_to_vault.png[]
 
 * "Finally, we need to set up **Cosign** to use our **TUF mirror registry**, which provides the cryptographic keys and trust information required for **Cosign** to sign our software artifacts," you explain, as you run the following command in the terminal:
-+
+
 [source, role="execute", subs="attributes"]
 ----
 cosign initialize --mirror=https://tuf-trusted-artifact-signer.{openshift_cluster_ingress_domain} --root=https://tuf-trusted-artifact-signer.{openshift_cluster_ingress_domain}/root.json
@@ -77,7 +80,7 @@ cosign initialize --mirror=https://tuf-trusted-artifact-signer.{openshift_cluste
 
 image::78_Initialize_Cosign.png[]
 
-=== Generating Software Bill of Materials (SBOM)
+=== 3. Generating Software Bill of Materials (SBOM)
 
 * "We'll go a step further and create an attested *Software Bill of Materials (SBOM)*."
 * *Developer*: What is an *SBOM*?
@@ -86,96 +89,37 @@ image::78_Initialize_Cosign.png[]
 * "Excellent question!  Having an *SBOM* with attestation is crucial. Let's say a known vulnerability is discovered in one of the open-source components used in your application."
 * "With an attested *SBOM*, you can quickly identify which versions of your application are affected and prioritize patching. *Attestation* ensures the *SBOM* itself hasn't been tampered with, providing confidence in its accuracy." you add.
 
-=== Vulnerability Scanning and Policy Enforcement
+=== 4. Vulnerability Scanning and Policy Enforcement
 
-* *Security Engineer*: “Understood. How do we enforce policies to block images that contain known vulnerabilities?”
-* "We will integrate your build pipeline with link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank], so images are scanned for CVEs before deployment. We will also define checks for known malicious libraries."
+* *Security Engineer*:  "Okay, but how can we enforce policies that stop the deployment of images with known malicious libraries?"
+* "Ah, yes. I remember that you struggled quite a bit with the link:https://en.wikipedia.org/wiki/Log4Shell[*Log4Shell*,window=_blank] vulnerability a few years back."
+* "We will include steps in the pipeline to perform both image scans and image checks against known CVEs and your organisation's policies. This way, we ensure that the images are clear of known vulnerabilities and that our policies are enforced during the build and deployment stages," you answer.
+* "In fact, let me log in to link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank] now and show you what those policies look like," you say as you open the {qa_cluster_acs_route}[RH ACS Console,window=_blank] and log in with your credentials, username: {qa_cluster_acs_portal_username} and password: {qa_cluster_acs_portal_password}.
 
-* You open the {qa_cluster_acs_route}[RH ACS Console,window=_blank], log in with username {qa_cluster_acs_portal_username} and password {qa_cluster_acs_portal_password}, and ignore the initial certificate warning.
-
-image::80_rhacs_login.png[]
-
-* You expand Platform Configuration from the left menu and select Policy Management. "Here, you can find existing policies or create new ones," you explain.
-
-image::83_rhacs_policy_management.png[]
-
-* "For instance, this policy checks whether your image has the infamous Log4Shell vulnerability," you say, scrolling to the Log4Shell policy.
-
-TIP: You can filter using Policy and inputing Log4Shell to find the policy faster.
-
-* You click the Kebab menu icon beside it, then Edit policy. "We can modify its behaviour, choosing to block builds, block deployments, or simply issue an alert."
-
-image::84_rhacs_edit_policy.png[]
-
-* "We can also create a policy that ensures images are signed before they are deployed. Let us set up a Cosign integration," you say, clicking Integrations in the left menu.
-
-image::81_rhacs_integrations.png[]
-
-* You scroll to Signature Integrations and click on the Signature tile.
-
-image::82_rhacs_signature_integrations.png[]
-
-* You click New Integration, explaining: “ACS uses this integration to check container image signatures.”
-
-image::85_rhacs_new_integration.png[]
-
-* Configure it as follows:
-** Integration name: cosign
-** Expand Cosign, then Add new public key
-** Public key name: cosign.pub
-** Public key value: paste the public key from the development environment
-** Click Save
-
-image::86_configure_new_integration.png[]
-
-NOTE: For convenience, there is already a policy named 0-Trusted Signature Policy in ACS that checks whether an image is signed.
-
-* You select Policy Management again and find 0-Trusted Signature Policy at the top of the list.
-
-image::rhacs-policy-management.png[]
-+
-image::rhacs-policy-management-list.png[]
-
-* You click the Kebab menu icon beside the policy and select Edit policy. Choose Policy criteria and click Select.
-
-image::rhacs-policy-actions-popup.png[]
-+
-image::rhacs-policy-criteria-select.png[]
-
-* “Here, we configure the policy to use the cosign integration,” you explain, selecting it and clicking Save.
-* Finally, you Enable policy through the Kebab menu icon once again.
-
-image::rhacs-policy-criteria-trusted-image-signers.png[]
-+
-image::rhacs-policy-actions-popup.png[]
-
-* “All done. ACS will enforce this policy in both the build and deployment stages,” you say.
-* *Security Engineer*: “That covers a lot. With signed commits, signed images, SBOMs and vulnerability checks, we significantly reduce our attack surface.”
-* “Exactly. Let me complete the setup, then I will demonstrate link:glossary.html#rhtap[*Red Hat Trusted Application Pipeline (RHTAP)*,window=_blank] in action. It includes prebuilt pipelines with these security checks, aiming for link:glossary.html#slsa[*SLSA*,window=_blank] Level 3.”
-
-
-=== Vulnerability Scanning and Policy Enforcement
-
-* *Security Engineer*:  "Ok, but how can we enforce policies like stop the deployment of images with known malicious libraries?"
-* "Ah, yes. I remember you struggled quiet a bit with the link:https://en.wikipedia.org/wiki/Log4Shell[*Log4Shell*,window=_blank] vulnerability a few years back."
-* "We'll include steps in the pipeline to perform both image scans and image checks against known CVEs and your organization's policies. This way, we ensure that the images are clear of known vulnerabilities and that our policies are enforced during the build and deploy stages," you answer.
-* "In fact, let me login into link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank] now and show what those policies look like," you say as you open the {qa_cluster_acs_route}[RH ACS Console,window=_blank] and log in with your credentials username: {qa_cluster_acs_portal_username} and password: {qa_cluster_acs_portal_password}
-
-NOTE: The browser will warn you of a certificate issue when you first access the RHACS console.  Ignore this warning and continue to the site.
+NOTE: The browser will warn you about a certificate issue when you first access the RHACS console. Ignore this warning and continue to the site.
 
 image::80_rhacs_login.png[]
 
-* You expand the *Platform Configuration* list from the left menu and then click on the *Policy Management* link, as you say: "Here you can find the list of readily available policies you can choose from."
+* You expand the *Platform Configuration* list from the left menu and then click on the *Policy Management* link, saying: "Here you can find a list of readily available policies."
 
 image::83_rhacs_policy_management.png[]
 
-* "For example, this policy over here checks if your image has the infamous *Log4Shell* vulnerability," you explain as you scroll down to show the *Log4Shell* policy.
-* You click on the *Kebab menu icon* next to this policy, and then click on *Edit policy*, continuing: "We can modify the behavior of this policy if we want."
+* "For example, this policy checks if your image has the infamous *Log4Shell* vulnerability," you explain as you scroll down to show the *Log4Shell* policy.
+
+TIP: You can filter by Policy and enter the policy name “Log4Shell” to find it more quickly.
+
+image::106_Filter_Log4Shell.png[]
+
+* You click on the *Kebab menu icon* next to this policy, and then click on *Edit policy*, adding: "We can modify the behavior of this policy if we want."
 
 image::84_rhacs_edit_policy.png[]
 
-* "Let's click on *Policy Behavior*, and if we scroll down, one of the options we can configure is the *Response Method*. Here we can decide if we want *ACS* to block the build or the deployment if the policy is violated, or simply trigger an alert."
-* "Or we can obviously configure new policies, let's setup a policy that verifies that our container image is signed during the build stage and whenever we try to deploy an application to *OpenShift*," you say as you click on the *Integrations* link in the left menu.
+* "Let’s click on *Policy Behavior*, Here, we can choose whether we want **ACS** to block the build or deployment if the policy is violated, or simply trigger an alert."
+* "For example, if we click on the **Review** section, we can see that this policy is configured to raise an alert if **Log4Shell** is detected during the build or deploy process."
+
+image::107_Policy_Behavior.png[]
+
+* "We can also configure new policies. Let's' set up a policy that verifies that our container image is signed during the build stage and whenever we attempt to deploy an application to *OpenShift*," you say as you click on the *Integrations* link in the left menu.
 
 image::81_rhacs_integrations.png[]
 
@@ -183,51 +127,60 @@ image::81_rhacs_integrations.png[]
 
 image::82_rhacs_signature_integrations.png[]
 
-* You click on the *New Integration* button as you say: "This policy requires *ACS* to integrate with *Cosign* to perform this check."
+* You click on the *New Integration* button as you say: "This policy requires *ACS* to integrate with *Cosign* for this check."
 
 image::85_rhacs_new_integration.png[]
 
-* You start configuring the nw integration as follows:
-** you enter *cosign* for the *Integration name*.
-** you then expand the *Cosign* field and click on *Add new public key*.
-** you set the *Public key name* as cosign.pub.
-** and for the *Public key value* you copy the public key from the *development environment* terminal and paste it in this field.
-** Finally you click the *Save* button.
+* We'll need the secret that we created earlier for this step, in your terminal run the following command and copy the content of cosign.pub
+
+[source, role="execute"]
+----
+cat cosign.pub 
+----
+
+image::108_cat_cosign_pub.png[]
+
+* You begin configuring the new integration as follows:
+. You enter *cosign* for the *Integration name*,
+. You then expand the *Cosign public keys* field and click on *Add new public key*, to set the *Public key name* as cosign.pub,
+. and for the *Public key value* you use the public key you just copied from the terminal
+. Finally, you click the *Save* button.
 
 image::86_configure_new_integration.png[]
 
-NOTE: For convenience, we have already set up a policy in ACS called *0-Trusted Signature Policy* that checks an image for a valid signature.
+NOTE: For convenience, there is already a policy in ACS called *0-Trusted Signature Policy* that checks an image for a valid signature.
 
-* "All we need to do is enable this policy and configure it to use to *cosign integration* we just configured," you explain to the team as you enable the policy.
-+
+* "All we need to do is enable this policy and configure it to use the *cosign integration* we just created," you explain to the team as you enable the policy.
+
 . You select *Policy Management* from the left menu.
-+
-image::rhacs-policy-management.png[]
-+
-. You find the policy called *0-Trusted Signature Policy* at the top of the list.
-+
-image::rhacs-policy-management-list.png[]
-. You click the *Kebab menu icon* next to the policy and select *Edit policy*.
-+
-image::rhacs-policy-actions-popup.png[]
-+
-. You then select *Policy criteria* and click the *Select* button.
-+
-image::rhacs-policy-criteria-select.png[]
-+
-. "This is where we configure our policy to use the *cosign integration* we just created ," you explain to team as you select the cosign signature integration and click the *Save* button.
-+
-image::rhacs-policy-criteria-trusted-image-signers.png[]
-+
-. You continue clicking next at the bottom until you finally save the policy.
-. "Now that the policy is updated, we want to enable it," you say as you click the *Kebab menu icon* again for the same policy and select *Enable policy*
-+
-image::rhacs-policy-actions-popup.png[]
 
-* "All done, now *ACS* will enforce this policy in both the build and deploy stages of our application."
-* *Security Engineer*:  "That sounds comprehensive. Implementing these measures would definitely strengthen our security posture."
-* "Excellent! Let me prepare the necessary setup and then I will demonstrate our solution based on link:glossary.html#rhtap[*Red Hat Trusted Application Pipeline (RHTAP)*,window=_blank] in action."
-* "*RHTAP* provides pre-built pipelines with automated security checks, aiming to achieve the highest level of security (link:glossary.html#slsa[*SLSA*,window=_blank] Level 3) for built artifacts and offers the capabilities I just explained."
+image::rhacs-policy-management.png[]
+
+. You find the policy called *0-Trusted Signature Policy* at the top of the list.
+
+image::rhacs-policy-management-list.png[]
+
+. You click the *Kebab menu icon* next to the policy and select *Edit policy*.
+
+image::109_edit_policy.png[]
+
+. You then select *Rules* and click the *Select* button.
+
+image::rhacs-policy-criteria-select.png[]
+
+"This is where we configure our policy to use the *cosign integration* we just created," you explain to the team as you select the cosign signature integration and click the *Save* button.
+
+image::rhacs-policy-criteria-trusted-image-signers.png[]
+
+. You continue clicking next at the bottom until you finally save the policy.
+. "Now that the policy is updated, we want to enable it," you say as you click the *Kebab menu icon* again for the same policy and select *Enable policy*.
+
+image::110_enable_policy.png[]
+
+* "All done, now *ACS* will enforce this policy in the build stage of our application."
+* *Security Engineer*:  "That sounds comprehensive. Implementing these measures will definitely strengthen our security posture."
+* "Excellent. Let me prepare the necessary setup and then I will demonstrate our solution based on link:glossary.html#rhtap[*Red Hat Trusted Application Pipeline (RHTAP)*,window=_blank] in action."
+* "*RHTAP* provides prebuilt pipelines with automated security checks, aiming to achieve the highest level of security, link:glossary.html#slsa[*SLSA*,window=_blank] Level 3, for built artifacts and offers the capabilities I just explained."
 
 === Chapter 2 - Summary
 
