--- a/content/modules/ROOT/pages/chapter03.adoc
+++ b/content/modules/ROOT/pages/chapter03.adoc
@@ -6,17 +6,17 @@
 
 === Demonstrating the Secure Build Process
 
-* You switch to the *Red Hat Developer Hub (RHDH)* dashboard, ready to demonstrate the new *GPT* with the security enhancements.
+* You switch to the *Red Hat Developer Hub (RHDH)* dashboard, ready to demonstrate the new *Software Template* with the security enhancements.
 
 ==== Running the Secure GPT
 
-* You click *Create* in the left menu and then select the *Choose* button for the *Secured Quarkus Service Software Supply Chain GPT*.
+* You click *Create* in the left menu and then select the *Choose* button for the *Securing a Quarkus Service Software Supply Chain (Jenkins)* software template.
 
 image::34_Run_Secure_GPT.png[]
 
 * You keep the default values and click the *Next* button on the first two forms.
 * Before you click the *Review* button on the third form, you show the team that *Verify Commits* is set to *enabled* in this form.
-* This is because this *GPT* is using the *Trusted Artifacts Signer* to verify that code commits are signed.
+* This is because this *software template* is using the *Trusted Artifacts Signer* to verify that code commits are signed.
 
 image::35_Review_Commits_Enabled.png[]
 
@@ -25,8 +25,8 @@ image::35_Review_Commits_Enabled.png[]
 
 image::36_Create_Second_GPT.png[]
 
-* The secure *GPT* executes successfully, you seize this moment to explain the value of using *GPTs* in this scenario.
-* "This environment," you explain, "is created with all the security guardrails we discussed. What's fantastic about *Golden Path Templates* is that the enhancements in the security pipeline are entirely transparent to our developer. This means they won't impact how he codes or builds applications."
+* The secure *software template* executes successfully, you seize this moment to explain the value of using *software template* in this scenario.
+* "This environment," you explain, "is created with all the security guardrails we discussed. What's fantastic about *software templates* is that the enhancements in the security pipeline are entirely transparent to our developer. This means they won't impact how he codes or builds applications."
 
 ==== Code Commit
 
@@ -34,7 +34,7 @@ image::36_Create_Second_GPT.png[]
 
 * You click on the *Open Component in Catalog* link.
 
-image::11_Executed_GPT.png[]
+image::111_secure_templated_completed.png[]
 
 * You find and click on the *OpenShift Dev Spaces (VSCode)* link.
 
@@ -47,7 +47,7 @@ image::95_Click_Openshift_Devspaces.png[]
 
 image::96_Trust_Authors.png[]
 
-* "For the purpose of this demo, updating the documentation will be enough to trigger the new build pipeline" you explain.
+* "For the purpose of this demo, updating the documentation will be enough to trigger the new build pipeline", you explain.
 * You expand the docs folder and open the markdown file *index.md*.
 * At the document's end, you add: "Build pipeline integrated with security tools."
 
@@ -88,7 +88,7 @@ git commit -m "Doc Update"
 
 image::90_Gitsign_Commit_Message.png[]
 
-* The browser will prompt you for your credentials.  Enter {developer_cluster_devspaces_user} for the username and {developer_cluster_devspaces_user_password} for the password.
+* The browser will prompt you for your credentials.  Enter {user} for the username and {password} for the password.
 
 image::91_Gitsign_Credentials_Prompt.png[]
 
@@ -117,123 +117,100 @@ git push
 ----
 
 * This action sets the build pipeline into motion.
-* You switch back to the *Developer Hub* and select the *CI tab* from the top menu, and expand the pipeline view to show the team that pipeline execution is in progress.
+* You switch back to the *Developer Hub* and select the *CI tab* from the top menu, to show the team that pipeline execution is in progress.
 
-image::49_Expand_Secure_Pipeline.png[]
+image::112_secure_pipeline_in_progress.png[]
+
+TIP: You can view the pipeline in the *Blue Ocean* view in Jenkins just like you did before.
 
 * You wait a few minutes until the build pipeline execution is complete, before you start explaining the security enhancements made to the build pipeline.
 * "Remember the build process we used for the insecure application? We’ve now added six new tasks to the pipeline, incorporating the security recommendations I outlined earlier."
 
-image::50_Secure_Build_Pipeline.png[]
+image::113_Jenkins_Secure_Build_Pipeline.png[]
 
 ==== Task 1: Verify Commit
 
-* "The first task after cloning our git repo, is ensuring the source code modifications were made by a trusted sourc," you explain.
+* "The first task after cloning our git repo, is ensuring the source code modifications were made by a trusted source," you explain.
 * "This task will only succeed if it can verify a trusted signature on the last commit that triggered the pipeline. This is the signature we provided using *GitSign* when we committed the code from *Dev Spaces*."
-* You then click on the task *verify-commit* and pull up the logs.
+* You then click on the task *verify-commit* and expand the logs section.
 
-image::51_Click_On_Verify_Commit.png[]
+image::114_Jenkins_Click_On_Verify_Commit.png[]
 
-* "Here in the log, you can see the user we used and the comment we provided when we made the last code change.”
+* "Here in the log, you can see that we successfully validated the signature for the user who made the last code change.”
 * "The *verify-commit* task executes the command link:https://git-scm.com/book/en/v2/Git-Tools-Signing-Your-Work[*git verify-commit*,window=_blank] to verify that the signature is valid, before the pipeline moves to the next task." you point out.
 
-image::52_Verify_Commit_Log.png[]
+image::115_Jenkins__Verify_Commit_Log.png[]
 
 ==== Task 2: Scan Source
 
 * "After we package the code, running a static analysis to detect any potential bugs or code style violations is a good idea."
-* I've setup a task called *scan-source* task, we utilize a tool called link:https://www.sonarsource.com/products/sonarqube[*SonarQube*,window=_blank] to analyze the source code and provide reports based on its quality.
-
-image::53_Scan_Source_Task.png[]
-
+* I've setup a task called *scan* task, we utilize a tool called link:https://www.sonarsource.com/products/sonarqube[*SonarQube*,window=_blank] to analyze the source code and provide reports based on its quality.
 * "We can view the scan results from the pipeline logs as we did before, or we could log in to *SonarQube* to get an in-depth report."
 * "Let's look at the *SonarQube* report this time," you decide.
 * To access *SonarQube*, you use the following link:
-** SonarQube URL: link:{developer_cluster_sonarqube_url}[*SonarQube*,window=_blank]
-** Username: {developer_cluster_sonarqube_username}
-** Password: {developer_cluster_sonarqube_password}
+** SonarQube URL: link:{sonarqube_url}[*SonarQube*,window=_blank]
+** Username: {sonarqube_user}
+** Password: {sonarqube_password}
 * You click on the project link in the *SonarQube* Dashboard.
+* "Good news! Our application has passed the validation test by *SonarQube*," you observe.
 
 image::54_SonarQube_Dashboard.png[]
-
-* "Our application has passed the validation test by *SonarQube*, with a few minor issues," you observe.
-* "I do recommend that you look into those issues nevertheless."
-
-image::55_SonarQube_Report.png[]
 
 === Task 3: Build and Sign Image
 
 * "Similar to your original pipeline, the *build-sign-image* task is responsible for building a container image based on your verified source code. It then generates the *Software Bill of Materials (SBOM)* we discussed earlier."
 * "This *SBOM* is then pushed to our *Red Hat Quay* registry upon successful completion of this task," you explain.
+* "The SBOM is then stored in the image registry, alongside your container image.”
 
-image::56_Build_Sign_Image.png[]
-
-* "As I explained before, we 've also configured *Tekton Chains* to automatically sign the container image, attest to it, and apply the SLSA Provenance to it."
-* "All of these additional artifacts are then stored in the image registry, alongside your container image.”
-* "This brings a higher degree of trust and verification to our processes, the shield you see in the pipeline view indicates that *Tekton Chains* has done its job and successfully signed our artifacts.” you explain.
-
-image::58_Signed_Pipeline_Run.png[]
+image::116_Jenkins_Build_Sign_Image.png[]
 
 * You then switch to the image registry tab and point to the screen, showing that the generated attestation, signature, and SBOM files are sitting side-by-side with the resulting container image produced by the pipeline in the registry.
 
 image::59_Generated_Artifacts_Registery.png[]
 
-=== Task 4: Image Scan
+=== Task 4: Upload SBOM to Repository
 
-* "Let's switch back to our pipeline view in *RHDH*, and look at the tasks performed by link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank]," you suggest.
-* "The *acs-image-scan* task performs an image scan to identify known vulnerabilities within the container image. It compares the image components against known vulnerability databases, uncovering any CVEs (Common Vulnerabilities and Exposures) that might compromise the container."
+* Once the *SBOM* has been generated, the next step is to upload it to your organisation’s CycloneDX repository. 
+* "The *SBOM* now sits in a single catalogue that every team can query, storing each SBOM with its build number and signature gives auditors a clear trail that proves provenance, verifies licensing obligations, and shows when components were updated or removed," you explain.
 
-image::60_ACS_Image_Scan_Task.png[]
+image::119_Jenkins_Upload_SBOM_To_CycloneDX[]
 
-* "We can review the report generated by *ACS*." you note, as you click on the *Output* icon under *ACTIONS*.
+=== Task 5: Upload SBOM to TPA
 
-image::61_Click_Output.png[]
+image::65_Upload_SBOM_TPA_Task.png[]
 
-* "Here you can see that we have 3 critical vulnerabilities, but what's great is that we also receive recommendations to upgrade to the version where those vulnerabilities are addressed."
+* In this step, the *SBOM* is uploaded to Trusted Profile Analyzer (TPA).  We do this to turn the raw SBOM into actionable information.  For example, TPA can identify dependencies in your image that are targets of known Common Vulnerabilities and Exploits (CVEs).  These CVE's can be viewed on the Trusted Profile Analyzer console for the specific *SBOM* uploaded.
 
-image::62_Image_Scan_Result.png[]
+image::120_Jenkins_Upload_SBOM_To_TPA.png[]
 
-=== Task 5: ACS Image Check
+=== Task 6: ACS Image Check
 
 * You switch back to the pipeline view as you explain: "*ACS* doesn't stop at scanning; it can also assess whether the image adheres to predefined rules by performing an image check".
 * "The *image-scan-check* task evaluates the container image against policies and compliance standards. This includes not running as root, using approved base images, or avoiding prohibited software packages, for example."
 
-image::63_ACS_Image_Check_Task.png[]
+image::118_Jenkins_ACS_Image_Check_Task.png[]
 
 * "Once again, we can view the analysis results," you say, clicking on the *Output* icon under *ACTIONS* and then selecting the *Image Check* tab.
 * "In this report, you can see all the violations that *ACS* detected and the recommended remediation actions."
 
 image::64_Image_Check_Result.png[]
 
-=== Task 6: Upload SBOM to Repository
+=== Task 7: Image Scan
 
-image::65_Upload_SBOM_Repo_Task.png[]
+* "Let's switch back to our pipeline view, and look at the tasks performed by link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank]," you suggest.
+* "The *acs-image-scan* task performs an image scan to identify known vulnerabilities within the container image. It compares the image components against known vulnerability databases, uncovering any CVEs (Common Vulnerabilities and Exposures) that might compromise the container."
 
-
-* You then demonstrate how to access the generated *SBOM* by clicking the link that's readily available in your pipeline view.
-
-image::57_SBOM_Link.png[]
-
-* After you click you immediately see the generated SBOM.
-
-image::66_SBOM.png[]
-
-=== Task 7: Upload SBOM to TPA
-
-image::65_Upload_SBOM_TPA_Task.png[]
-
-
-* In this step, the SBOM is uploaded to Trusted Profile Analyzer.  We do this to turn the raw SBOM into actionable information.  For example, TPA can identify dependencies in your image that are targets of known Common Vulnerabilities and Exploits (CVEs).  These CVE's can be viewed on the Trusted Profile Analyzer console for the specific SBOM uploaded.
+image::117_Jenkins_ACS_Image_Scan_Task.png[]
 
 === Demonstrating the Secure Deploy Process
 
 * Addressing the QA engineer, you begin, “Now, I'm going to show you how to validate that an image is signed before deploying it for testing.”
 * “You'll use the link:glossary.html#ec[*Enterprise Contract CLI (ec)*,window=_blank] along with *Cosign* to first check the original image from the insecure application. I've prepared a script specifically for this purpose.”
-* You execute the command in the QA environment terminal:
+* You execute the command in the terminal:
 +
 [source, role="execute"]
 ----
-sh validate-insecured.sh
+./validate-image.sh insecured
 ----
 
 image::67_Validate_Insecure_Image.png[]
