--- a/content/modules/ROOT/pages/chapter01.adoc
+++ b/content/modules/ROOT/pages/chapter01.adoc
@@ -213,7 +213,7 @@ image::100_view_build_Action.png[]]
 
 image::101_jenkins_login.png[]
 
-* You enter the user name {jenkins_user} and password {jenkins_password} to login
+* You enter the user name {user} and password {password} to login
 * In the Jenkins Dashboard, you click on the *Open Blue Ocean* link in the left navigation menu.
 
 image::102_click_on_blue_ocean.png[]
