--- a/content/modules/ROOT/pages/chapter03.adoc
+++ b/content/modules/ROOT/pages/chapter03.adoc
@@ -7,9 +7,6 @@
 === Demonstrating the Secure Build Process
 
 * You switch to the *Red Hat Developer Hub (RHDH)* dashboard, ready to demonstrate the new *Software Template* with the security enhancements.
-
-==== Running the Secure GPT
-
 * You click *Create* in the left menu and then select the *Choose* button for the *Securing a Quarkus Service Software Supply Chain (Jenkins)* software template.
 
 image::34_Run_Secure_GPT.png[]
@@ -27,8 +24,6 @@ image::36_Create_Second_GPT.png[]
 
 * The secure *software template* executes successfully, you seize this moment to explain the value of using *software template* in this scenario.
 * "This environment," you explain, "is created with all the security guardrails we discussed. What's fantastic about *software templates* is that the enhancements in the security pipeline are entirely transparent to our developer. This means they won't impact how he codes or builds applications."
-
-==== Code Commit
 
 * "To trigger our secure build pipeline, let's open VSCode and make a small change to the documentation.", you say.
 
@@ -124,7 +119,7 @@ image::112_secure_pipeline_in_progress.png[]
 TIP: You can view the pipeline in the *Blue Ocean* view in Jenkins just like you did before.
 
 * You wait a few minutes until the build pipeline execution is complete, before you start explaining the security enhancements made to the build pipeline.
-* "Remember the build process we used for the insecure application? We’ve now added six new tasks to the pipeline, incorporating the security recommendations I outlined earlier."
+* "Remember the build process we used for the insecure application? We’ve now added seven new tasks to the pipeline, incorporating the security recommendations I outlined earlier."
 
 image::113_Jenkins_Secure_Build_Pipeline.png[]
 
@@ -147,10 +142,7 @@ image::115_Jenkins__Verify_Commit_Log.png[]
 * I've setup a task called *scan* task, we utilize a tool called link:https://www.sonarsource.com/products/sonarqube[*SonarQube*,window=_blank] to analyze the source code and provide reports based on its quality.
 * "We can view the scan results from the pipeline logs as we did before, or we could log in to *SonarQube* to get an in-depth report."
 * "Let's look at the *SonarQube* report this time," you decide.
-* To access *SonarQube*, you use the following link:
-** SonarQube URL: link:{sonarqube_url}[*SonarQube*,window=_blank]
-** Username: {sonarqube_user}
-** Password: {sonarqube_password}
+* To access *SonarQube*, you use the following link: https://sonarqube-sonarqube.{OPENSHIFT_CLUSTER_INGRESS_DOMAIN} and log in with your credentials, username: {adminuser} and password: {password}.
 * You click on the project link in the *SonarQube* Dashboard.
 * "Good news! Our application has passed the validation test by *SonarQube*," you observe.
 
@@ -158,7 +150,7 @@ image::54_SonarQube_Dashboard.png[]
 
 === Task 3: Build and Sign Image
 
-* "Similar to your original pipeline, the *build-sign-image* task is responsible for building a container image based on your verified source code. It then generates the *Software Bill of Materials (SBOM)* we discussed earlier."
+* "Similar to your original pipeline, the *build-sign-image* task is responsible for building a container image based on your verified source code. It then attests the image and generates the *Software Bill of Materials (SBOM)* we discussed earlier."
 * "This *SBOM* is then pushed to our *Red Hat Quay* registry upon successful completion of this task," you explain.
 * "The SBOM is then stored in the image registry, alongside your container image.”
 
@@ -170,18 +162,18 @@ image::59_Generated_Artifacts_Registery.png[]
 
 === Task 4: Upload SBOM to Repository
 
-* Once the *SBOM* has been generated, the next step is to upload it to your organisation’s CycloneDX repository. 
+* Once the *SBOM* has been generated, the next step is to upload it to your organization's CycloneDX repository. 
 * "The *SBOM* now sits in a single catalogue that every team can query, storing each SBOM with its build number and signature gives auditors a clear trail that proves provenance, verifies licensing obligations, and shows when components were updated or removed," you explain.
 
-image::119_Jenkins_Upload_SBOM_To_CycloneDX[]
+image::119_Jenkins_Upload_SBOM_To_CycloneDX.png[]
 
 === Task 5: Upload SBOM to TPA
 
-image::65_Upload_SBOM_TPA_Task.png[]
-
-* In this step, the *SBOM* is uploaded to Trusted Profile Analyzer (TPA).  We do this to turn the raw SBOM into actionable information.  For example, TPA can identify dependencies in your image that are targets of known Common Vulnerabilities and Exploits (CVEs).  These CVE's can be viewed on the Trusted Profile Analyzer console for the specific *SBOM* uploaded.
+* In parallel, the *SBOM* is uploaded to Trusted Profile Analyzer (TPA).  We do this to turn the raw SBOM into actionable information.  For example, TPA can identify dependencies in your image that are targets of known Common Vulnerabilities and Exploits (CVEs).  These CVE's can be viewed on the Trusted Profile Analyzer console for the specific *SBOM* uploaded.
 
 image::120_Jenkins_Upload_SBOM_To_TPA.png[]
+
+* To access *Trusted Profile Analyzer (TPA)*, you use the following link: https://sso-trusted-profile-analyzer.{OPENSHIFT_CLUSTER_INGRESS_DOMAIN} and log in with your credentials, username: {adminuser} and password: {password}.
 
 === Task 6: ACS Image Check
 
@@ -190,14 +182,8 @@ image::120_Jenkins_Upload_SBOM_To_TPA.png[]
 
 image::118_Jenkins_ACS_Image_Check_Task.png[]
 
-* "Once again, we can view the analysis results," you say, clicking on the *Output* icon under *ACTIONS* and then selecting the *Image Check* tab.
-* "In this report, you can see all the violations that *ACS* detected and the recommended remediation actions."
-
-image::64_Image_Check_Result.png[]
-
 === Task 7: Image Scan
 
-* "Let's switch back to our pipeline view, and look at the tasks performed by link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank]," you suggest.
 * "The *acs-image-scan* task performs an image scan to identify known vulnerabilities within the container image. It compares the image components against known vulnerability databases, uncovering any CVEs (Common Vulnerabilities and Exposures) that might compromise the container."
 
 image::117_Jenkins_ACS_Image_Scan_Task.png[]
@@ -219,7 +205,7 @@ image::67_Validate_Insecure_Image.png[]
 +
 [source, role="execute"]
 ----
-sh validate-secured.sh
+./validate-image.sh secured 
 ----
 
 * "Obviously, the validation is successful with the secure image.” you conclude, pointing at the success result in the terminal.
@@ -231,7 +217,7 @@ image::79_EC_Validation_Success.png[]
 +
 [source, role="execute"]
 ----
-sh deploy-insecured.sh
+./deploy-app.sh insecured
 ----
 * "The policy does its job and stops us from deploying the insecure application."
 
@@ -240,7 +226,7 @@ sh deploy-insecured.sh
 +
 [source, role="execute"]
 ----
-sh deploy-secured.sh
+./deploy-app.sh secured
 ----
 * "This time the deployment is successful and you can proceed to test this application and promote to production with confidence.", you assure the QA Engineer.
 
